--- a/index.htm
+++ b/index.htm
@@ -148,11 +148,12 @@
                 Реклама, как любимый, ароматный,
                 обжигающий напиток, взбодрит.
                 Клиенты станут активнее. Прибыль порадует.
-
+                    <br>
+                    <br>
                 <div class="bold">
                     Угостите свой бизнес! <br class="desktop-display-none"> <br class="desktop-display-none"> Размещайте рекламу в
                     <br><br>
-                    Подмосковье по цене чашки кофе.
+                    Клину по цене чашки кофе.
                 </div>
             </div>
         </div>
@@ -340,9 +341,9 @@
                 Нужны подробности? <br> <br> <br>
 
 
-                Звоните <a href="tel:+79015167884"> +7 901 516 78 84</a> <br> <br>
+                Звоните <a href="tel:+7966138-138-4"> +7 (966) 138-138-4</a> <br> <br>
 
-                менеджер Алена <br> <br> <br>
+                менеджер Денис <br> <br> <br>
 
 
                 <span class="text-paragraph--yellow">Консультация бесплатно.</span> <br> <br> <br>
