--- a/index.htm
+++ b/index.htm
@@ -376,17 +376,14 @@
     <div class="container">
         <div class="flex-wrap">
             <div class="logo-wrap">
-                <img src="assets/site-files/img/header/profmedia-logo.svg" alt="">
+                <img src="assets/site-files/img/header/EuropaPlus.png" alt="">
             </div>
             <div class="header__text">
-                реклама на радио в Подмосковье
+                Реклама на радио в г.Клин
             </div>
             <a href="" class="confid-text">
                 Политика конфидециальности
             </a>
-            <div class="developedby">
-                Разработка сайта <a href="https://vk.com/diana.solovyeva">Соловьева Диана</a>
-            </div>
         </div>
     </div>
 </footer>
