--- a/index.htm
+++ b/index.htm
@@ -83,13 +83,13 @@
                     <a href="send/index.htm" target="_blank" class="image">
                         <i style="color:#1BD741; font-size:36px;" class="fab fa-whatsapp"></i>    
                     </a>
-                    <a href="https://telegram.me/AlenkaGordeeva" target="_blank" class="image">
+                    <a href="https://telegram.me/amohonf" target="_blank" class="image">
                         <i style="color:#61A8DE; font-size:36px" class="fab fa-telegram"></i>
                     </a>
-                    <a href="viber://chat?number=%2B79015167884" target="_blank" class="image desktop-display-none">
+                    <a href="" target="_blank" class="image desktop-display-none">
                         <i style="color:#7D3DAF;font-size: 36px;" class="fab fa-viber"></i>
                     </a>
-                    <a href="mailto:alena1981tv@gmail.com" target="_blank" class="image">
+                    <a href="mailto:kam.dena@yandex.ru" target="_blank" class="image">
                         <i style="font-size:36px;"class="fas fa-at"></i>
 
                     </a>
@@ -351,17 +351,17 @@
 
                 Связаться с нами через
             </div>
-            <div class="messengers-wrap">
+            <div class="messengers-wrap" id="footermessage">
                 <a href="send/index.htm" target="_blank" class="image">
                     <img src="assets/site-files/img/header/whatsapp.svg" alt="">
                 </a>
-                <a href="https://telegram.me/AlenkaGordeeva" target="_blank" class="image">
+                <a href="https://telegram.me/amohonf" target="_blank" class="image">
                     <img src="assets/site-files/img/header/telegram.svg" alt="">
                 </a>
-                <a href="viber://chat?number=%2B79015167884" target="_blank" class="image">
+                <a href="" target="_blank" class="image desktop-display-none">
                     <img src="assets/site-files/img/header/viber.svg" alt="">
                 </a>
-                <a href="mailto:alena1981tv@gmail.com" class="image">
+                <a href="mailto:kam.dena@yandex.ru" class="image">
                     <img src="assets/site-files/img/header/mail.png" alt="">
                 </a>
             </div>
