--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
 </div>
 <div class="popup popup-form">
     <div class="overlay"></div>
-    <form method="post" action="" class="form-wrap ajax_form">
+    <form method="post" action="mail.php" class="form-wrap ajax_form">
     <img src="assets/site-files/img/radio-section/close.svg" alt="" class="form-wrap__close">
     <div class="form-wrap__head-text">
         Форма заказа
