--- a/index.htm
+++ b/index.htm
@@ -49,19 +49,10 @@
         <input name="phone" type="number" class="input__input" placeholder="Ваш телефон">
     </div>
     <span class="error_email"></span>
-    <button class="btn" onclick="ym(69522844,'reachGoal','predlogenie');return true">
+    <button class="btn">
         Получить пакетное <br>
         размещение со скидкой
     </button>
-    <input type="hidden" name="checkbox[]">
-    <label class="checkbox-wrap">
-        <input name="checkbox[]" type="checkbox" class="checkbox-wrap__input">
-        <div class="checkbox-wrap__text">Я согласен на обработку конфидециальной информации</div>
-    </label>
-    <span class="error_checkbox"></span>
-    <div class="form-wrap__bottom-text">
-        Заполнение формы вас ни к чему не обязывает
-    </div>
 
 	<input type="hidden" name="af_action" value="02fc0d3d1ce829c90c97851db1be88e6">
 </form></div>
